# AgentForge-AI

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  template.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
agentforge/: __init__.py  approval.py  cli.py  config.py  eval_engine.py  logger.py  orchestrator.py
agentforge/agents/: base.py  dev_agent.py  schemas.py  standup_agent.py  triage_agent.py
agentforge/graph/: state.py
agentforge/mcp/: base.py  github_server.py  notion_server.py  slack_server.py
agentforge/tests/: test_agents_base.py  test_approval.py  test_config.py  test_dev_agent.py  test_eval_engine.py  test_logger.py  test_mcp_base.py  test_mcp_github.py  test_mcp_notion.py  test_mcp_slack.py  test_orchestrator.py  test_schemas.py  test_standup_agent.py  test_triage_agent.py
docs/: api-reference.md  architecture.md  configuration.md
