[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentforge"
version = "0.1.0"
description = "Multi-agent orchestration platform over MCP servers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2",
    "pydantic-settings>=2",
    "pyyaml>=6",
    "langgraph>=0.1",
    "langchain>=0.1",
    "langchain-openai>=0.1",
    "langchain-groq",
    "httpx>=0.27",
    "tenacity>=8.2",
    "python-dotenv>=1",
]
[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4",
]
[project.scripts]
agentforge = "agentforge.cli:app"
[project.urls]
Homepage = "https://github.com/OmRajput17/AgentForge"
Repository = "https://github.com/OmRajput17/AgentForge"
Issues = "https://github.com/OmRajput17/AgentForge/issues"
